Bug 691500 - Bad pdf file generated with pdfwrite
Summary: Bad pdf file generated with pdfwrite
Status: RESOLVED FIXED
Alias: None
Product: GhostXPS
Classification: Unclassified
Component: General (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-26 18:04 UTC by Marcos H. Woehrmann
Modified: 2014-03-27 06:15 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2010-07-26 18:04:33 UTC
The following command generates a bad pdf file, neither Ghostscript nor Acrobat can read it and evince produces a lot of error messages:

  ./xps/obj/gxps -sOutputFile=test.pdf -sDEVICE=pdfwrite -dNOPAUSE -dBATCH xpsfts-a4/fts_41xx.xps

Ghostscript produces the following error:

GPL Ghostscript SVN PRE-RELEASE 9.00 (2010-07-31)
Copyright (C) 2010 Artifex Software, Inc.  All rights reserved.
This software comes with NO WARRANTY: see the file PUBLIC for details.
Processing pages 1 through 4.
Page 1
Page 2
Page 3
Error: /rangecheck in --run--
Operand stack:
   --dict:6/15(L)--   0.753906   0   0.753906   0.100098   0.199951   0.300049   --nostringval--
Execution stack:
   %interp_exit   .runexec2   --nostringval--   --nostringval--   --nostringval--   2   %stopped_push   --nostringval--   --nostringval--   --nostringval--   false   1   %stopped_push   1910   1   3   %oparray_pop   1909   1   3   %oparray_pop   1893   1   3   %oparray_pop   --nostringval--   --nostringval--   4   1   4   --nostringval--   %for_pos_int_continue   --nostringval--   --nostringval--   false   1   %stopped_push   --nostringval--   --nostringval--   --nostringval--   %array_continue   --nostringval--   false   1   %stopped_push   --nostringval--   %loop_continue   --nostringval--   --nostringval--   --nostringval--
Dictionary stack:
   --dict:1157/1684(ro)(G)--   --dict:1/20(G)--   --dict:82/200(L)--   --dict:82/200(L)--   --dict:108/127(ro)(G)--   --dict:290/300(ro)(G)--   --dict:22/25(L)--   --dict:6/8(L)--   --dict:21/40(L)--   --dict:9/15(L)--   --dict:8/15(L)--
Current allocation mode is local
Last OS error: 2
GPL Ghostscript SVN PRE-RELEASE 9.00: Unrecoverable error, exit code 1


Adding a -r72 to the gxps command line changes the Ghostscript error message to:

GPL Ghostscript SVN PRE-RELEASE 9.00 (2010-07-31)
Copyright (C) 2010 Artifex Software, Inc.  All rights reserved.
This software comes with NO WARRANTY: see the file PUBLIC for details.
Processing pages 1 through 4.
Page 1
Error: /undefined in --run--
Operand stack:
   --dict:6/15(L)--   File
Execution stack:
   %interp_exit   .runexec2   --nostringval--   --nostringval--   --nostringval--   2   %stopped_push   --nostringval--   --nostringval--   --nostringval--   false   1   %stopped_push   1910   1   3   %oparray_pop   1909   1   3   %oparray_pop   1893   1   3   %oparray_pop   --nostringval--   --nostringval--   2   1   4   --nostringval--   %for_pos_int_continue   --nostringval--   --nostringval--   false   1   %stopped_push   --nostringval--   --nostringval--   --nostringval--   %array_continue   --nostringval--   false   1   %stopped_push   --nostringval--   %loop_continue   --nostringval--   %finish_show   --nostringval--   --nostringval--   11   12   1   --nostringval--   (gs_show_enum)   %op_show_continue   --nostringval--   --nostringval--   2116   --nostringval--   --nostringval--   (gstatetype)   --dict:0/0(L)--   --nostringval--   false   1   %stopped_push   --nostringval--   %loop_continue   --nostringval--   --nostringval--
Dictionary stack:
   --dict:1157/1684(ro)(G)--   --dict:1/20(G)--   --dict:82/200(L)--   --dict:82/200(L)--   --dict:108/127(ro)(G)--   --dict:290/300(ro)(G)--   --dict:22/25(L)--   --dict:6/8(L)--   --dict:21/40(L)--   --dict:5/5(L)--   --dict:5/5(L)--   --dict:7/15(L)--   --dict:13/18(ro)(L)--   --dict:2/3(L)--   --dict:3/5(L)--   --dict:8/14(L)--
Current allocation mode is local
Last OS error: 2
GPL Ghostscript SVN PRE-RELEASE 9.00: Unrecoverable error, exit code 1
Comment 1 Ken Sharp 2014-03-27 06:15:59 UTC
This is fixed in commit 4840334cee8f79d3dedb8b95899dc43e7a55779a Ghostscript is now able to process the output PDF file without error, though Acrobat and evince still give a few reports.